[project]
    authors = [{ name = "Stefan Eiermann", email = "python-org@ultraapp.de" }]
    dependencies = []
    description = "This package can parse and compare semantic versioning."
    license = { file = "LICENSE" }
    name = "version_parser"
    readme = "README.md"
    requires-python = ">=3.8"
    version = "1.0.1"


    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: JavaScript",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development",
        "Topic :: Utilities",
    ]

[project.urls]
    Homepage = "https://github.com/eieste/VersionParser"


[build-system]
    build-backend = "hatchling.build"
    requires = ["hatchling"]
